Replace "new Boolean(x)" with something that doesn't create new objects
git-svn-id: http://svn.vuze.com/public/client@43829 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2