@@ -166,7 +166,7 @@ AEProxySelectorSWTImpl
 																"pairing.ui.icon.show" );
 										
 										mi_show.setStyle( MenuItem.STYLE_CHECK );
-										mi_show.setData( new Boolean( is_visible ));
+										mi_show.setData(Boolean.valueOf(is_visible));
 										
 										mi_show.addListener(
 												new MenuItemListener()
@@ -197,7 +197,7 @@ AEProxySelectorSWTImpl
 													
 													status.setVisible( is_visible );
 													
-													mi_show.setData( new Boolean( is_visible ));
+													mi_show.setData(Boolean.valueOf(is_visible));
 													
 													if ( is_visible ){
 														
