@@ -121,7 +121,7 @@ public class PeersItem extends CoreTableColumnSWT implements
 		menuShowIcon.setStyle(TableContextMenuItem.STYLE_CHECK);
 		menuShowIcon.addFillListener(new MenuItemFillListener() {
 			public void menuWillBeShown(MenuItem menu, Object data) {
-				menu.setData(new Boolean(showIcon));
+				menu.setData(Boolean.valueOf(showIcon));
 			}
 		});
 
