@@ -93,7 +93,7 @@ public class RankItem
 	menuShowIcon.setStyle(TableContextMenuItem.STYLE_CHECK);
 	menuShowIcon.addFillListener(new MenuItemFillListener() {
 		public void menuWillBeShown(MenuItem menu, Object data) {
-			menu.setData(new Boolean(showIcon));
+			menu.setData(Boolean.valueOf(showIcon));
 		}
 	});
 	
